deployment/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
