deployment/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
